# rust-htmx

./: Cargo.toml  readme.md
src/: lib.rs  main.rs
src/controller/: form_qs.rs  home.rs  mod.rs
src/data/: mod.rs  model.rs  posts_datasource.rs
src/lib/: idiomorph-ext.min.js
src/views/: home.rs  mod.rs
tests/: post_update_tests.rs
